[package]
name = "mcp-network-proxy"
version = "0.1.0"
edition = "2021"
description = "Open-source MCP server that acts as an HTTP egress proxy for sandboxed MCP hosts."
license = "Apache-2.0"
repository = "https://github.com/anthropics/mcp-network-proxy"
readme = "README.md"

[dependencies]
rmcp = { version = "1.3", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "stream",
] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "io-std",
    "io-util",
] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
bytes = "1"
futures-util = "0.3"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
